tools: misc