@@ -27,7 +27,6 @@
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent -->
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<!--<version>2.0.4.RELEASE</version>-->
 		<version>2.1.0.M2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
@@ -248,13 +247,13 @@
 		</dependency>
 
 
-		<!--&lt;!&ndash; modules-info madness tested &ndash;&gt;-->
-		<!--<dependency>-->
-		<!--&lt;!&ndash; https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations &ndash;&gt;-->
-		<!--<groupId>com.fasterxml.jackson.core</groupId>-->
-		<!--<artifactId>jackson-annotations</artifactId>-->
-		<!--<version>2.9.6</version>-->
-		<!--</dependency>-->
+		<!-- modules-info madness tested -->
+		<dependency>
+			<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.9.6</version>
+		</dependency>
 		<!--<dependency>-->
 		<!--&lt;!&ndash; https://mvnrepository.com/artifact/javax.transaction/javax.transaction-api &ndash;&gt;-->
 		<!--<groupId>javax.transaction</groupId>-->
@@ -361,8 +360,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<source>10</source>
-					<target>10</target>
+					<source>1.10</source>
+					<target>1.10</target>
 					<!--<release>10</release>-->
 					<excludes>
 						<!-- excludes files from being put into same path as classes -->
@@ -371,10 +370,10 @@
 					<encoding>UTF-8</encoding>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
-					<!-- parameters for JDK 10 -->
+					<!-- parameters for JDK 10
 					<parameters>true</parameters>
-					<compilerArgument>--add-modules=javafx.controls,javafx.base,javafx.fxml,javafx.graphics
-					</compilerArgument>
+					<compilerArgument>-.-add-modules=javafx.controls,javafx.base,javafx.fxml,javafx.graphics
+					</compilerArgument>-->
 				</configuration>
 				<dependencies>
 					<dependency>
